<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mausam</string>
    <string name="action_settings">Settings</string>
    <string name="ic_city_name">City:</string>
    <string name="ic_city_name_hint">Specify city to locate weather</string>
    <string name="ic_btn_search">Search</string>
    <string name="ic_temperature">Temperature:</string>
    <string name="ic_pressure">Pressure:</string>
    <string name="ic_humidity">Humidity</string>

</resources>
